* fixed result pruning truncation detection logic * OS-dependent options styling * AC input handles Mac keypresses more consistently with the original Firefox one

--- a/chrome/skin/classic/danbooruup/danbooruUp.css
+++ b/chrome/skin/classic/danbooruup/danbooruUp.css
@@ -50,76 +50,3 @@ toolbarbutton#artistSearch > .toolbarbutton-icon {
 	border: 1px dotted black;
 }
 
-/* options dialog */
-
-.windowDialog, .windowDialog prefpane { padding: 0px; }
-.contentPane { margin: 9px 8px 5px 8px; }
-.zcontentPane { margin: 0px 0px 0px 0px; }
-.actionButtons { margin: 0px 3px 6px 3px !important; }
-
-#danbooruUpOptions {
-	padding: 1px;
-	width: 40em !important;
-	height: 48em !important;
-}
-
-#danbooruUpOptions > prefpane {
-	padding: 1px;
-}
-
-#styleBox {
-	min-height: 20em;
-}
-#danbooruTree {
-	min-height: 15em;
-}
-#updateInterval,#resultLimit {
-	width: 5em;
-}
-
-#tagTreeBox {
-	border-width: 1px;
-	-moz-border-top-colors: ThreeDDarkShadow;
-	-moz-border-right-colors: ThreeDDarkShadow;
-	-moz-border-bottom-colors: ThreeDDarkShadow;
-	-moz-border-left-colors: ThreeDDarkShadow;
-	padding: 0;
-	border-style: solid;
-	background-color: -moz-Field;
-	max-width: 15em;
-}
-
-#danbooruUpOptions radio[pane] {
-	list-style-image: url(chrome://browser/skin/preferences/Options.png);
-}
-
-radio[pane=danbooruUpGeneralPane] {
-	-moz-image-region: rect(0px, 32px, 32px, 0px);
-}
-radio[pane=danbooruUpGeneralPane]:hover, radio[pane=danbooruUpGeneralPane][selected=true] {
-	-moz-image-region: rect(32px, 32px, 64px, 0px);
-}
-
-radio[pane=danbooruUpDanbooruPane] {
-	-moz-image-region: rect(0px, 96px, 32px, 64px);
-}
-radio[pane=danbooruUpDanbooruPane]:hover, radio[pane=danbooruUpDanbooruPane][selected=true] {
-	-moz-image-region: rect(32px, 96px, 64px, 64px);
-}
-
-radio[pane=danbooruUpAutocompletePane] {
-	-moz-image-region: rect(0px, 224px, 32px, 192px);
-}
-radio[pane=danbooruUpAutocompletePane]:hover, radio[pane=danbooruUpAutocompletePane][selected=true] {
-	-moz-image-region: rect(32px, 224px, 64px, 192px);
-}
-
-radio[pane=danbooruUpStylePane] {
-	list-style-image: url(chrome://mozapps/skin/extensions/viewButtons.png) !important;
-	-moz-image-region: rect(0px, 64px, 32px, 32px);
-}
-radio[pane=danbooruUpStylePane]:hover, radio[pane=danbooruUpStylePane][selected=true] {
-	list-style-image: url(chrome://mozapps/skin/extensions/viewButtons.png) !important;
-	-moz-image-region: rect(32px, 64px, 64px, 32px);
-}
-
